# ML_campus

./: .gitignore  README.md  models.json5  plots_matplotlib.py  plots_plotly.py  pyproject.toml  run_benchmark.py
anomaly_detection/: __init__.py
anomaly_detection/core/: __init__.py  system.py  time_series.py  utils.py
anomaly_detection/models/: __init__.py  ar.py  ar_dev.py  base.py  prophet.py  stl.py
src/: anomaly_detection_benchmark.py  dataset.py  grapher.py  metrics.py
src/loggers/: __init__.py  base_logger.py  inline_logger.py
src/utils/: utils.py
time_series_examples/: market_apps_search_request_screen.csv
time_series_examples/multivariate/: time_series_0.csv  time_series_1.csv  time_series_3.csv
