[project]
name = "AI360_team_19"
version = "0.1.0"
description = "Upgrade anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "json5>=0.13.0",
    "pandas>=2.3.3",
    "prophet>=1.3.0",
    "pydantic>=2.12.5",
    "salesforce-merlion>=2.0.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "termcolor>=3.3.0",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "notebook>=7.5.3",
]
